k8s/frontend-deployment.yaml
# deployment file controls the behaviors (life cycles) of pods in kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
      - name: portfolio-frontend-container
        image: poul0315/portfolio-frontend:latest  # Placeholder, updated by GitHub Actions
        ports:
        - containerPort: 80
