k8s/frontend-service.yaml
# service routes data from ingress to pods. its like load balancing between ingress and pods
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  type: ClusterIP
  selector:
    app: portfolio-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
