k8s/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 12345  # Internal HTTP traffic
  - name: https
    port: 443
    targetPort: 443
    nodePort: 12345  # Internal HTTPS traffic
  selector:
    app.kubernetes.io/name: ingress-nginx
